[gd_scene load_steps=3 format=3 uid="uid://5atpqa3xbsgp"]

[ext_resource type="Script" path="res://scenes/ui/lose_condition.gd" id="1_mbj5k"]
[ext_resource type="PackedScene" uid="uid://bslhrv3eo36wd" path="res://scenes/lobby.tscn" id="2_oe8g6"]

[node name="LoseCondition" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mbj5k")
lobby_scene = ExtResource("2_oe8g6")
metadata/_edit_use_anchors_ = true

[node name="BG" type="ColorRect" parent="."]
visible = false
z_index = 2
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.129412, 0.129412, 0.129412, 0.619608)

[node name="LoseContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
modulate = Color(0.901961, 0.141176, 0.270588, 1)
layout_mode = 2
offset_left = 20.0
offset_top = 250.0
offset_right = 1132.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text" type="Label" parent="LoseContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 51
text = "You lose !"

[node name="PanelContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 533.0
offset_top = 368.0
offset_right = 629.0
offset_bottom = 434.0
metadata/_edit_use_anchors_ = true

[node name="RetryButton" type="Button" parent="PanelContainer"]
unique_name_in_owner = true
process_mode = 3
modulate = Color(0.631373, 0.596078, 1, 1)
layout_mode = 2
text = "Retry"

[node name="MainMenuButton" type="Button" parent="PanelContainer"]
unique_name_in_owner = true
process_mode = 3
visible = false
modulate = Color(0.631373, 0.596078, 1, 1)
layout_mode = 2
text = "Main Menu"
